# weaver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: env.cfg
include/: server.h
src/: createServer.cpp  listenConnection.cpp  readConfig.cpp  serveClient.cpp  server.cpp
